//
//  ServiceWebKey.swift
//  Baluchon
//
//  Created by Nicolas SERVAIS on 07/10/2021.
//

import Foundation

struct Key:KeyProtocol {
    static let meteo: String = "7f56e99d43347757e34b56dc724c4f14"
    static let translate: String = "trnsl.1.1.20211008T083252Z.cee3b644d6428600.b3734a42213874e1db7af3f92f4f7561be05dee9"
    static let convert: String = "7f05eab3cc1e90d1eeae63eba6ff8625"
}
